--- a/Week3/HWW3/index.html
+++ b/Week3/HWW3/index.html
@@ -31,12 +31,36 @@
         </div>
         <div class="item-right">
           <ul>
-            <li><a href="">Actueel</a></li>
-            <li><a href="">Onderwerpen</a></li>
-            <li><a href="">Ministeries</a></li>
-            <li><a href="">Regering</a></li>
-            <li><a href="">Documenten</a></li>
-            <li><a href="">Doe mee</a></li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/actueel" target="_blank"
+                >Actueel</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/onderwerpen" target="_blank"
+                >Onderwerpen</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/ministeries" target="_blank"
+                >Ministeries</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/regering" target="_blank"
+                >Regering</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/documenten" target="_blank"
+                >Documenten</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/doe-mee" target="_blank"
+                >Doe mee</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
@@ -47,12 +71,36 @@
         </a>
         <div id="myLinks">
           <ul>
-            <li><a href="#">Actueel</a></li>
-            <li><a href="#">Onderwerpen</a></li>
-            <li><a href="#">Ministeries</a></li>
-            <li><a href="#">Regering</a></li>
-            <li><a href="#">Documenten</a></li>
-            <li><a href="#">Doe mee</a></li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/actueel" target="_blank"
+                >Actueel</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/onderwerpen" target="_blank"
+                >Onderwerpen</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/ministeries" target="_blank"
+                >Ministeries</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/regering" target="_blank"
+                >Regering</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/documenten" target="_blank"
+                >Documenten</a
+              >
+            </li>
+            <li>
+              <a href="https://www.rijksoverheid.nl/doe-mee" target="_blank"
+                >Doe mee</a
+              >
+            </li>
           </ul>
         </div>
       </div>
