Updated the header

--- a/Week3/HWW3/index.html
+++ b/Week3/HWW3/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Informatie van de Rijksoverheid | Rijksoverheid.nl</title>
   </head>
 
   <body>
